fix image stretching

--- a/src/components/footer/footer.styles.scss
+++ b/src/components/footer/footer.styles.scss
@@ -16,6 +16,8 @@
       place-items: center;
       .logo-light {
         height: 60px;
+        // width: auto;
+        object-fit: contain;
         width: fit-content;
       }
       .buttons-container {
