--- a/src/index.css
+++ b/src/index.css
@@ -147,3 +147,20 @@ a {
   outline: 2px solid red;
 } */
 /* //fix popular memberships */
+
+::-webkit-scrollbar {
+  width: 5px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: lightgray;
+  border: none;
+  outline: none;
+  border-radius: 5px;
+  /* outline: 1px solid slategrey; */
+}
+
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 6px rgb(255, 255, 255);
+  outline: none;
+}
